Slots/H027_奧林帕斯 2500/Versions/3.0.0.2/game_rule.md
# 奧林帕斯 2500 (Olympus 2500) 遊戲規則說明

> 文件版本：v3.0（FG Hit Rate 輪帶權重調整版）
> 對標競品：Pragmatic Play - Gates of Olympus 1000  
> 撰寫依據：玩法以企劃提案與競品資料為主；現階段數學值以 `Source/H0271.xlsx` 為主
> 編號：H027  
> 基礎數學版本：`3`
> 撰寫日期：2026-08-03  
> 實作狀態：依 Version 選擇 H027192A／H027194A v3.0.0.0 對應 Config；Card System Off 使用該 Config 的原始自然機率，On 則套用所選 Profile 的卡片權重。

---

## §1. 遊戲基本資訊

| 項目 | 說明 |
| --- | --- |
| Game ID | 101027 |
| PARsheet ID | H0271 |
| 遊戲名稱 | 奧林帕斯 2500 |
| 遊戲英文名 | Olympus 2500 |
| 遊戲類型 | Video Slot - Pay Anywhere / Cascade |
| 盤面規格 | 6 輪盤、每輪 5 列固定盤面，共 30 格 |
| 中獎方式 | Pay Anywhere；同一個一般符號在整個盤面合計達 8 個以上即得獎 |
| 最小 / 最大 Ways | - |
| 特殊押注 | Normal Bet：扣款 1 × 玩家所選基礎 Bet；獎金以該基礎 Bet 計算 |
|  | Extra Bet：扣款 2 × 玩家所選基礎 Bet；獎金仍以該基礎 Bet 計算 |
|  | Buy Feature：扣款 100 × 玩家所選基礎 Bet；FG 獎金仍以該基礎 Bet 計算 |


---

## §2. 盤面結構

```text
   R1   R2   R3   R4   R5   R6
   ↓    ↓    ↓    ↓    ↓    ↓
┌────┬────┬────┬────┬────┬────┐
│    │    │    │    │    │    │
├────┼────┼────┼────┼────┼────┤
│    │    │    │    │    │    │
├────┼────┼────┼────┼────┼────┤
│    │    │    │    │    │    │
├────┼────┼────┼────┼────┼────┤
│    │    │    │    │    │    │
├────┼────┼────┼────┼────┼────┤
│    │    │    │    │    │    │
└────┴────┴────┴────┴────┴────┘
```

- 每次 Spin 產生 30 個符號。
- 中獎符號消除後，其上方符號向下掉落；空位從該 Reel 初始可視窗頂端之前的位置，沿同一條首尾相接輪帶依序補入，不使用獨立的符號掉落權重。
- 補滿後重新判定所有一般符號，直到盤面不再出現新中獎，該次 Spin 才結束。
- Scatter、C2 與 C3 不屬於一般得分符號，不因 Any-8 規則自行消除。
- C1 出現後原地保留至該次 Spin 的所有 Cascade 結束；補位時同一輪不得再補入另一顆 C1，確保同一輪最多一顆 C1。

---

## §3. 符號類別

### 3.1 一般符號

| 類別 | 代碼 / 符號 |
| --- | --- |
| 高分符號 | M1 皇冠、M2 沙漏、M3 戒指、M4 聖杯 |
| 低分符號 | A 紅色寶石、K 紫色三角寶石、Q 金色六角寶石、J 綠色三角寶石、TE 藍色寶石 |

- 一般符號皆以 1×1 格出現。
- 每一種一般符號獨立統計盤面數量並判定 8–9、10–11、12+ 的賠付級距。

### 3.2 特殊符號

| 符號 | 出現位置 | 行為 |
| --- | --- | --- |
| **C1 / Scatter** | BG、FG 盤面 | 最終盤面達門檻可觸發 FG；打擊 JP 符號；不屬於一般 Any-8 得分符號，也不自行參與消除 |
| **C2 / Multiplier** | BG、FG 盤面 | 提供固定乘倍值；不屬於一般 Any-8 得分符號，也不自行參與消除 |
| **C3 / Super Multiplier** | BG、FG 盤面 | 提供乘倍值；每次中獎消除後提升一個倍數等級；不屬於一般 Any-8 得分符號，也不自行參與消除 |

---

## §4. 賠率表（Pay Table）

**單位：倍 / Bet；同一符號只依盤面合計數量支付一次。**

| 符號 | 8–9 個 | 10–11 個 | 12 個以上 |
| --- | ---: | ---: | ---: |
| 皇冠（M1） | 10 | 25 | 50 |
| 沙漏（M2） | 2.5 | 10 | 25 |
| 戒指（M3） | 2 | 5 | 15 |
| 聖杯（M4） | 1.5 | 2 | 12 |
| 紅色寶石（A） | 1 | 1.5 | 10 |
| 紫色三角寶石（K） | 0.8 | 1.2 | 8 |
| 金色六角寶石（Q） | 0.5 | 1 | 5 |
| 綠色三角寶石（J） | 0.4 | 0.9 | 4 |
| 藍色寶石（TE） | 0.25 | 0.75 | 2 |

目前 xlsx 的 Scatter 賠付：

| C1 數量 | 獎金 | BG 取得 FG | FG Retrigger |
| --- | ---: | ---: | ---: |
| 3 | 0 | 不觸發 | +5 Spins |
| 4 | 3 × Bet | 15 Spins | +5 Spins |
| 5 | 5 × Bet | 15 Spins | +5 Spins |
| 6 | 100 × Bet | 15 Spins | +5 Spins |

一般符號基本獎金計算：

`該符號級距賠率 × Bet`

所有 Cascade 的一般符號基本獎金相加後，再依 §6 的 C2／C3 規則乘倍；Scatter 獎金不乘 C2／C3。

---

## §5. 核心遊戲流程（Base Game）

1. 玩家選擇押注模式與 Bet。
2. 依該模式的輪帶與選表權重產生 6 輪盤、每輪 5 格的初始盤面。
3. 對每一種一般符號統計盤面數量；本作沒有 WW，不加入 Wild 替代數量。
4. 合計達 8 個以上的符號依 §4 給獎；同一盤面可有多種一般符號同時中獎。
5. 所有中獎一般符號一併消除，盤面掉落並補入新符號。
6. 若仍有新中獎，重複判定、給獎、消除與補位。
7. 每發生一次中獎消除，消除前已在盤面的每顆 C3 往後升一個倍數級距；C2 倍數不升級。
8. 所有 Cascade 結束後結算 C2／C3 總倍數、Scatter 獎金、OP Jackpot 打擊與 FG 觸發。

---

## §6. 核心特色

### 6.1 C2／C3 倍數機制

- 輪帶只產生倍數球候選符號 C2；每一顆生成的 C2 都依所在輪帶表與當前初始球數／掉落 Combo 欄位，獨立判定是否轉為 C3。
- 初始盤面依轉換前的 C2 總數選取 1～6 欄，每顆 C2 的轉換率隨球數增加而降低：`BG_Symbol`、`BG_Symbol (3)`、FG 與 BF 使用 `4000 / 2600 / 1900 / 1500 / 1300 / 1100`；`BG_Symbol (2)` 固定為前述權重的 1/5，即 `800 / 520 / 380 / 300 / 260 / 220`。雖然單顆轉換率下降，但主曲線至少出現一顆 C3 的整體機率仍由 1 顆時 40.00% 上升至 6 顆時 50.30%。
- 掉落階段依 Combo 1、2、3、4、5+ 選取欄位；主曲線使用 `2000 / 1300 / 950 / 750 / 650`，為初始主曲線對應第 1～5 欄的 1/2；`BG_Symbol (2)` 使用其 1/5，即 `400 / 260 / 190 / 150 / 130`。Combo 5 以後統一使用 5+。
- C2 只在「生成當下」判定一次是否轉為 C3；已在盤面上的 C2 不會在後續 Cascade 重新判定，已轉成 C3 也不再重抽轉換。
- C2 使用 BG、FG、Buy Feature 各自的球上倍率分布。BG 三張表的 500x、1000x、2500x 直接抽取率各為 0.2%；FG 兩張表的 100x、250x、500x、1000x、2500x 直接抽取率各為 0.1%；BF 的 C2 分布維持既有設定。
- C3 的 2x、3x、4x 直接抽取權重固定為 0，其餘可直接抽取倍率按既有相對比例重新正規化；100x、250x、500x、1000x、2500x 的直接抽取權重仍為 0。C3 最低直接抽取倍率為 5x，並可透過後續消除升級到較高級距。
- C2 出現後維持原倍數，不因 Cascade 升級。
- 同一 Spin 最終盤面有多顆 C2／C3 時，所有倍數相加，不相乘。
- BG 的 C2／C3 只作用於該次 Spin；FG Spin 有一般符號得分時，該次最終盤面的 C2／C3 才依 §7 加入累積倍數，並保留至該場免費遊戲結束。
- **最終盤面沒有 C2／C3 時，該次 Spin 的等效倍數就是 1x**（BG、FG 皆同）。FG 先前累積的倍數不會在這種 Spin 上作用，但也不會歸零。

### 6.2 Cascade 後 C3 升級

**每發生一次中獎消除，消除前已在盤面的每顆 C3 必定往後提升一個倍數等級；C2 不升級。**

- C3 的升級等級依 xlsx `Parameter / Multiplier Level` 順序；升級後可到達未直接配置抽取權重的較高級距。
- 同一個 Cascade 即使同時有多種符號中獎，也只算一次消除事件，因此每顆 C3 只升一級。
- 該次消除後新掉落進盤面的 C3 不追溯升級；必須等下一次中獎消除才升級。
- C3 升至 2500x 後，後續 Cascade 維持 2500x。
- C2 與 C3 本身皆不消除，會留在盤面供後續 Cascade 及最終結算使用。

### 6.3 Extra Bet

- 成本：2 × Normal Bet。
- 效果：Free Game 觸發機率為 Normal Bet 的 5 倍。

---

## §7. 免費遊戲（Free Spins / Free Game, FG）

### 7.1 觸發

- 目前 xlsx 規格為 BG 最終盤面出現 4 個以上 C1 時觸發。
- 4、5、6 個 C1 均取得 15 Spins，並另依 §4 支付 Scatter 獎金。
- 觸發判定在所有 Cascade 結束後執行。

### 7.2 FG 玩法

- 初始 15 Spins 的輪帶組合依 xlsx `Parameter` 的 Free Game Table Setting 產生並打亂順序。
- FG 中每次 Spin 仍使用 Any-8 與 Cascade。
- FG Spin 必須有一般符號得分，該次最終盤面的所有 C2／C3 值才加入 FG 累積倍數。
- 若該次 Spin 沒有一般符號得分，即使最終盤面出現 C2／C3，也不加入累積倍數；只有 Scatter 得分同樣不視為一般符號得分。
- 已累積的 FG 倍數跨 Spin 保留，直到整場 FG 結束才清除。
- **累積倍數只在「該次 Spin 最終盤面本身有 C2／C3」時才作用。** 有一般符號得分但最終盤面沒有任何
  C2／C3 的 Spin，不論累積倍數已經多少，該次一律以 1x 結算；累積倍數本身不歸零，保留給後續有球的 Spin。
- 倍數在所有 Cascade 結束後，對該次 Spin 的一般符號得分總和一次套用，不逐段套用。
- 設 `R` 為本次 Spin 所有 Cascade 的一般符號基本獎金總和、`M_prev` 為 Spin 開始前的 FG 累積倍數、`M_now` 為本次最終盤面 C2／C3 倍數總和、`S` 為 Scatter 獎金，則：

  `M_prev' = R > 0 且 M_now > 0 時為 M_prev + M_now；否則維持 M_prev`（累積池，帶到下一次 Spin）

  `M_apply = R > 0 且 M_now > 0 時為 M_prev + M_now；否則為 1`

  `本次 FG 獎金 = R × M_apply + S`

- Scatter 獎金 `S` 不乘 C2／C3 倍數。
- FG 最多 50 Spins。
- FG 內每次中獎消除後，消除前已在盤面的 C3 依倍率階層往後升一級。

### 7.3 Retrigger（加局）

- FG 最終盤面出現 3 個以上 C1 時增加 5 Spins。
- 末場 FG 若符合條件，仍可加局，但總場次不得超過 50 Spins。
- 4–6 個 C1 同時支付目前 xlsx 定義的 Scatter 獎金。

---

## §8. Buy Feature（購買特色）

目前玩法提供：

- Buy Feature：100 × 玩家所選基礎 Bet；FG 獎金仍以該基礎 Bet 計算。
- Buy Feature 初始盤面由專用盤面產生器建立：R2～R5 各固定出現 1 個 C1（共 4 個），其餘 26 格以 9 種一般得分符號等機率產生，並進入一般 FG。
- **本作沒有 Super Feature；Bet Mode 3 不可使用。**

---

## §9. 邊界 / 例外情境（Edge Cases）

### 9.1 Wild 相關

- **本作沒有 WW / Wild。** 輪帶載入時必須排除 WW，不得替代一般符號，也沒有 WW→C2。

### 9.2 倍數機制相關

- **多顆倍數符號**：同一盤面的 C2／C3 倍數採加總，不相乘。
- **C2／C3 不消除**：兩者都不屬於 Any-8 得分符號，周圍符號消除時留在盤面。
- **C3 升級**：只有 C3 在每次中獎消除後升一級；C2 維持出現時的倍數。
- **單顆上限**：C2／C3 初始倍率共用競品分布；C3 可在後續得分消除中逐級升至 2500x。
- **FG 累積**：有一般符號得分的 FG Spin，最終盤面的 C2／C3 才加入 FG 累積倍數；只有 Scatter 得分或無得分時不累積，FG 結束後歸零。
- **FG 倍數作用條件**：累積倍數只在「該次 Spin 最終盤面本身有 C2／C3」時才作用。有得分但盤面無球的 Spin 以 1x 結算，累積倍數保留不歸零。

### 9.3 Scatter 相關

- **Scatter 不參與 Any-8**：C1 原地保留至所有 Cascade 結束後再判定。
- **FG 判定點**：每次 Spin 所有 Cascade 結束後，統計最終盤面 C1。
- **打擊 OP Jackpot**：C1 Scatter 除處理自身賠付與 FG／Retrigger 外，也會打擊 OP Jackpot 符號。
- **同轉輪最多一個**：Scatter 在相同轉輪最多只會出現一個。
- **輪帶間距**：同一張輪帶的同一 Reel 中，任兩個 C1／SC 的輪帶位置索引距離至少為 6；輪帶視為首尾相接，尾端至起點的循環距離也必須符合此限制。
- **輪帶來源與長度**：v3 沿用 v2 的競品還原輪帶 Set 0～4 循環等價序列，各 Reel 實際長度固定為競品原始的 63 或 64 格，不得補成 200／300 格。
- **停點權重**：`BG_Symbol` 直接使用 `FG_Symbol` 的符號順序與 Stop Weight；FG_Symbol 與 FG_Symbol (2) 為使 FG Hit Rate 接近 44%，使用 1～10 的整數 Stop Weight，v3 實際有效範圍為 1～5。BF 入場使用 `BF_Symbol` 的 Stop Weight，只有指定入場停點為正權重。超出實際輪長的模板列必須留白。
- **C1 邊界**：每張輪帶每一 Reel 的 RNG 索引前 5 格與最後 5 格不得放置 C1；只允許整條循環輪帶位移，不得藉此改變符號比例、循環順序或相鄰關係。

### 9.4 Free Game 相關

- **末場加局**：最後一場若取得 3 個以上 C1，仍立即增加場次。
- **場次上限**：總 FG 場次上限為 50。
- **FG 倍數累積**：C2 與 C3 都可能出現；整場 FG 的多顆倍數球加總累積目前不另設上限。

### 9.5 Buy Feature 相關

- **自然觸發一致性**：Buy 進入 FG 後使用與自然觸發相同的 FG 規則。
- **進場 C1**：BF 入場完全由 `BF_Symbol` 輪帶及 Stop Weight 產生，不再由程式覆寫盤面。唯一有效停點固定在 R1～R4 各顯示 1 顆 C1，R5～R6 不會顯示 C1，因此每次恰好 4 顆。
- **進場不得分**：BF 入場有效停點的任一一般符號都少於 8 顆，固定不產生一般符號獎金及 Cascade；入場的 4 顆 C1 也不支付 Scatter 獎金，該盤只負責觸發免費遊戲，最終得分固定為 0。

### 9.6 Pay Anywhere / Cascade 相關

- **多種符號同時中獎**：每種符號獨立判定並相加基本獎金，再套用 C2 規則。
- **無 Wild 計數**：Any-8 只統計該一般符號本身，不加入任何替代符號。
- **Cascade 終止條件**：直到盤面沒有任何一般符號達到 8 個以上。

### 9.7 押注與帳務相關

- **Bet 基準**：Normal Bet、Extra Bet 與 Buy Feature 的賠付皆以玩家所選基礎 Bet 為計算基準；Extra Bet 僅將扣款提高為 2 倍，Buy Feature 僅將扣款提高為 100 倍。

---

## 附錄 A. 詞彙對照

| 名詞 | 說明 |
| --- | --- |
| BG / Base Game | 主遊戲 |
| FG / Free Game | 免費遊戲 |
| Pay Anywhere / Any-8 | 同符號在全盤面合計達 8 個以上得獎 |
| Cascade | 中獎符號消除、掉落補位並再次判定 |
| WW | 舊 xlsx 底稿中的 Wild 代碼；H027 正式玩法不使用 |
| C1 | Scatter 代碼 |
| C2 | Multiplier 倍數符號代碼 |
| C3 | 升級倍數符號代碼；每顆新生成的 C2 依輪帶表及初始球數／掉落 Combo 權重獨立判定是否轉成 C3 |
| Extra Bet | 2x 扣款、FG 機率提升為 5 倍的押注模式 |

---

## 附錄 B. 文件來源 / 參考

- 主要玩法依據：`文件/260630_Olympus 2500.pptx`。
- 92 RTP 家族數學依據：`Source/H027192A.xlsx`；94 RTP 家族數學依據：`Source/H027194A.xlsx`。
- 基本資訊依據：`../iGaming 遊戲代號一覽.xlsx`。
- 目前程式：`Simulator.py`、`config.js`、`config_92A.js`、`config_94A.js`；各 Config 分別對應 `Source/H0271.xlsx`、`Source/H027192A.xlsx`、`Source/H027194A.xlsx`。
- 待確認事項：`問題清單_H027.md`。
